# Computer-Graphics

Camera/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Camera.sln  Camera.vcxproj  Camera.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Camera/Camera.dir/Debug/Camera.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Camera.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Camera/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Camera/resources/: simple.vert
Camera/src/: GLHelper.h  Model.h  RenderEngine.h  WorldState.h  main.cpp
Circle/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Circle.sln  Circle.vcxproj  Circle.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Circle/Circle.dir/Debug/Circle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Circle/Debug/: Circle.ilk
Circle/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Circle/src/: main.cpp
Events/: ALL_BUILD.vcxproj  CMakeLists.txt  Events.vcxproj  Events.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Events/src/: GraphicsHelpers.h  WorldState.h  main.cpp
GLVersion/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  GLVersion.sln  GLVersion.vcxproj  GLVersion.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
GLVersion/BST/: .project
GLVersion/Debug/: GLVersion.ilk
GLVersion/GLVersion.dir/Debug/GLVersion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLVersion.lastbuildstate  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GLVersion/src/: main.cpp
GLVersion/x64/Debug/GLVersion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog
GLVersion/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Image/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  ImageBuilder.sln  ImageBuilder.vcxproj  ImageBuilder.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Image/Debug/: ImageBuilder.ilk
Image/ImageBuilder.dir/Debug/ImageBuilder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ImageBuilder.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Image/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Image/src/: Colorer.h  ImageBuilder.h
Transform/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Transform.sln  Transform.vcxproj  Transform.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Transform/Transform.dir/Debug/Transform.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Transform/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Transform/src/: GraphicsHelpers.h  WorldState.h  main.cpp
